src/objects/MMCONT_EDU__c.object
<CustomObject>
    <description>(MBI) - MMD - Contact Education</description>
    <fields>
        <fullName>CONTID__c</fullName>
        <label>Contact MMD ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MMD Education</relationshipLabel>
        <relationshipName>MMD_Contact_Education</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DEGREE__c</fullName>
        <label>Degree</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESEQ__c</fullName>
        <label>Seq #</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHOOL__c</fullName>
        <label>School</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>YEAR__c</fullName>
        <label>Year Completed</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>MMD Contact Education</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Contact Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>